Evaluation/Conclusion: added reference and recommendations

--- a/project-5-customer-churn.ipynb
+++ b/project-5-customer-churn.ipynb
@@ -12,7 +12,16 @@
    "metadata": {},
    "source": [
     "## Business Overview\n",
-    "Tasked with creating a classifier to predict whether a customer will stop doing business with SyriaTel so they can reduce how much money is lost on customers who won't be sticking much longer. This will help them recognize patterns of leaving customers."
+    "Tasked with creating a classifier to predict whether SyriaTel customers will churn so they can reduce how much money is lost on customers who won't be sticking much longer, can focus on retention, and identify. This will help them recognize patterns of leaving customers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Understanding\n",
+    "\n",
+    "Data is taken from [Kaggle](\"https://www.kaggle.com/datasets/becksddf/churn-in-telecoms-dataset\") Contains 3333 rows of customers and 21 columns. Our data contains information on phone use, account length, where they are from etc. Our data does have an innate imbalance because it hurts our company far more to falsely identify someone as retained when they will actually churn than it will to send a simple rention email to someone who will stay than to make no attempt to someone who will probably leave."
    ]
   },
   {
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +42,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -571,7 +580,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Separating our features into categorical and numerical columns for easier Data Cleaning"
+    "Separating our features into categorical and numerical columns for easier data cleaning"
    ]
   },
   {
@@ -1275,7 +1284,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1509,6 +1518,8 @@
    "source": [
     "Our Accuracy and Recall are decently high but our precision is pretty bad. This means that our model was good at predicting churn, but also overcompensated and predicted customers were aren't going to leave as likely to leave. This would affect our companies retention efforts. Overall it is better to reach out to capture those likely to capture as many customers likely to churn while also grabbing some who weren't planning on leaving. \n",
     "\n",
+    "The main issue is our data is not linear and therefore not a great match for a logistic regression. Let's try a model that can handle nonlinear data with multiple features quickly and efficiently\n",
+    "\n",
     "We will now move onto other models to see if we can improve those metrics"
    ]
   },
@@ -1564,7 +1575,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The overall metrics of this Decision Tree Classifier are better but not in the metric that we care most about. Our recall actually decreased from .74 to .64"
+    "The overall metrics of this Decision Tree Classifier are better but not in the metric that we care most about. Our recall actually decreased from 74% to 64%. A potential reason for this could be that our tree is overfitting on our training data and not performing well on our test data\n",
+    "\n",
+    "We can now try a Random Forest Classifier which averages several Decision Trees Classifiers and reduces the chances of overfitting on our data. It is more computationally intensive but if our metrics increase it will be well worth it."
    ]
   },
   {
@@ -1619,7 +1632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have the exact same metrics from both our decision tree and random tree so lets try tuning our models further"
+    "We have the exact same metrics from both our Decision Tree Classifier and Random Tree Classifier so lets try tuning our Decision Tree Classifier model further to see if we can account for overfitting and improve our metrics, we will first check out feature importance"
    ]
   },
   {
@@ -1747,7 +1760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YAY this is our best performing model yet. Our recall which is the most important feature is 76%"
+    "YAY this is our best performing model yet. Our recall which is the most important evaluation metric is 76%, it's less computationally intensive, can easily give us the most important features which are total day minutes, customer service calls, and international plan. "
    ]
   },
   {
@@ -1761,8 +1774,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our best performing model was a pruned Decision Tree which was accurately able to predict churn with 90% accuracy. However, do to the limited amount of data as well as the imbalance in our Churn target variable in this instance we care more about our recall metric. Our recall metrics measures how correctly our model was able to correctly identify customers who would churn. The reason we care about this over all other metrics is due to to the fact that it hurts our company more to lose a customer we thought would no"
+    "Our best performing model was a pruned Decision Tree which was accurately able to predict churn with 90% accuracy. However, due to the limited amount of data as well as the imbalance in our churn target variable in this instance we care more about our recall metric. \n",
+    "Our recall metrics measures how correctly our model was able to correctly identify customers who would churn. The reason we care about this over all other metrics is due to to the fact that it hurts our company more to lose a customer we thought would stay than it is to attempt retention efforts toward someone who has no plans on leaving as that will be a minor inconvenience for them.\n",
+    "Our Recall was again 76% with the most important features being total day minutes, customer service calls and if they had an international plan."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With a larger dataset it is absolutely possible to improve our model even further. Many academic articles have approached this problem as well including one that was able to attain a 99% accuracy, 99% precision score as well as a 99.01% recall score cited below\n",
+    "\n",
+    "Wagh, S. K., Andhale, A. A., Wagh, K. S., Pansare, J. R., Ambadekar, S. P., & Gawande, S. (2023). Customer churn prediction in telecom sector using machine learning techniques. Results in Control and Optimization, 14, 100342. https://doi.org/10.1016/j.rico.2023.100342"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 7: Conclusion/Recommendation:\n",
+    "Use this model to save company money, work with our marketing team and collect more data to train a more robust machine learning model:\n",
+    "\\n Focus retention efforts on the following features:\n",
+    "* Total day minutes\n",
+    "* Customer service calls\n",
+    "    * Especially customers who have had to call in more than 2 times\n",
+    "* Customers with intenational plans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
